--- a/src/pages/Account/Account.css
+++ b/src/pages/Account/Account.css
@@ -5,7 +5,11 @@
 .welcome{
     display: flex;
     flex-direction: row;
+    padding-top: 80px;
     
+}
+.navigate-panel{
+    padding-top: 80px;
 }
 .navigate-panel a:hover{
     color: red;
@@ -23,24 +27,31 @@
     display: flex;
    justify-content: space-around;
    width: 100%;
+   padding-top: 80px;
     
 }
 .my ul{
     list-style: none;
+   
 }
 .my-account{
-    width: 30%;
+    width: 300px;
 }
 
 .my-account ul{
     padding: 20px;
+    padding-left: 20px;
     margin-left: 30px;
 }
 .my-account ul li{
     margin-left: 40px;
+    padding-right: 10px;
 }
 .my-account ul li ul li{
     margin-left: -20px;
+}
+.list{
+    color: darkcyan;
 }
 
 .navigate{
@@ -52,11 +63,14 @@
 
 .profile{
     width: 70%;
-    box-shadow: 0 0 3px #efddddfb;
+    box-shadow: 0 0 2px #efddddfb;
+    
+    
    
 }
 .details{
     padding-left: 80px;
+    
    
 }
 .edit-profile{
@@ -64,10 +78,47 @@
     padding-top: 40px;
     padding-bottom: 10px;
 }
-.name{
+.details-user{
     display: flex;
     justify-content:space-between;
+    
 }
-l{
-    padding: auto;
+.namel{
+    padding-right: 300px;
+}
+.namef input{
+    height: 50px;
+    border: none;
+    outline: none;
+    width: 250px;
+    background-color: #f5f5f5;
+    font-size: 16px;
+    margin-bottom: 20px;
+    
+     
+}
+.namel input{
+    height: 50px;
+    border: none;
+    outline: none;
+    width: 250px;
+    background-color: #f5f5f5;
+    font-size: 16px;
+    margin-bottom: 20px;
+    
+     
+}
+.password{
+    height: 50px;
+    border: none;
+    outline: none;
+    width: 560px;
+    background-color: #f5f5f5;
+    font-size: 16px;
+    margin-bottom: 20px; 
+}
+.cancel{
+    display: flex;
+    padding-right: 50px;
+    
 }
