--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -27,6 +27,7 @@
 }
 
 .search-input {
+    margin-right: 20px;
     position: relative;
     background-color: #f8f6f6;
     border: 1px solid #ccc;
