--- a/src/pages/WishList/WishList.css
+++ b/src/pages/WishList/WishList.css
@@ -1,6 +1,1 @@
-.wish-list-row{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 80px 135px;
-}
+/* This file can be deleted as we'll move styles to Tailwind classes */
